better error propagation, fix for MPU
